--- a/4-BOLUM/WEB-Giris-001/index.html
+++ b/4-BOLUM/WEB-Giris-001/index.html
@@ -69,6 +69,19 @@
     <input type="password" placeholder="sifrenizi girin">
     <!-- Asagidaki inputun bir ekrani yok, html olarak arka planda durur -->
     <input type="hidden" value="Ekranda gounmem, ama html olarak varim">
+
+    <!-- dosya yuklemesi yapmak icin type=file -->
+    <input type="file">
+
+    <input type="radio">
+
+    <input type="checkbox" value="checkbox">
+
+    <!-- Radio ile checkbox birbirine benzerdir. Ikisi arasindaki fark; radio grubundan  sadece bir tane secilmesine izin verilirken, checkbox'ta kullanici birden fazla checkboxu isaretleyebilir -->
+
+    <textarea name="" id="" placeholder="Metin Girin">Daha uzun metin girisleri yapilmasina olanak saglar</textarea>
+
+    <img src="https://picsum.photos/200/300" alt="resim">
 </body>
 
 </html>
