--- a/4-BOLUM/CSS-002/index.html
+++ b/4-BOLUM/CSS-002/index.html
@@ -90,7 +90,7 @@
             font-size: 40px;
         }
 
-        /* dome icindeki sadece ilk p elementi */
+        /* dome icindeki sadece ilk p elementinin belli bir kisimdaki alanindan oncesi ve sonrasi */
 
         #p_first::before {
             background-color: red;
