--- a/4-BOLUM/WEB-Giris-001/index.html
+++ b/4-BOLUM/WEB-Giris-001/index.html
@@ -2,11 +2,11 @@
 <html>
 
 <head>
-    <!-- Satfa ile ilgili meta bilgileri; aciklamalar, arama motorlari icin keywordler, css ve ya javasctrip kodlari yazilabilir -->
+
 </head>
 
 <body>
-    <!--  Body bolumun icinde sayfanin tasarimini olusturacak ogeler yazilir -->
+
     <h1>Baslik-1</h1>
     <h2>Baslik-2</h2>
     <h3>Baslik-3</h3>
@@ -63,6 +63,7 @@
 
     <!-- Button -->
     <input type="button" value="Ben bir buttonum" name="adbutton">
+    <button type="button">Ben Bir Buttonum</button>
 
     <!-- icine metin girilen bir text box -->
     <input type="text" placeholder="Buraya yazi yazilabilir">
