--- a/4-BOLUM/JS-Exercise(random)/index.html
+++ b/4-BOLUM/JS-Exercise(random)/index.html
@@ -17,9 +17,9 @@
             <input type="number" id="guess" min="1" max="100">
             <button id="submitGuess">Tahmin Et</button>
         </div>
-        <h4 id="feedback"></h4>
-        <p>Kalan tahmin hakki: <span id="remainingGuesses"></span></p>
-        <p id="endMessage"></p>
+        <p id="remainingGuesses"></p>
+        <h4 id="feedback"> </h4>
+        <h4 id="endMessage"> </h4>
         <button id="restartGame" style="display: none;">Tekrar Dene</button>
     </div>
 
