--- a/4-BOLUM/JS-Exercise(random)/index.html
+++ b/4-BOLUM/JS-Exercise(random)/index.html
@@ -10,8 +10,8 @@
 
 <body>
     <div class="container">
-        <h2>Sayi Tahmin Oyunu</h2>
-        <p>1 ile 100 arasi bir sayi tuttuk. Bakalim bulabilecek misin?</p>
+        <h1>Sayi Tahmin Oyunu</h1>
+        <p class="description">1 ile 100 arasi bir sayi tuttuk. Bakalim bulabilecek misin?</p>
         <div class="inputWrapper">
             <label for="guess">Tahminini gir:</label>
             <input type="number" id="guess" min="1" max="100">
