--- a/4-BOLUM/JquerryTailwindExercise/src/index.html
+++ b/4-BOLUM/JquerryTailwindExercise/src/index.html
@@ -5,12 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../dist/output.css">
-    <title>Document</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <title>Rick and Morty</title>
 </head>
 
-<body class="bg-darkBrown">
-    <h1 class="text-7xl bg-lightPeach font-schwifty">RICK AND MORTY DATABASE
-    </h1>
+<body>
+    <div class="flex flex-col items-center justify-center max-w-4xl gap-8 px-3 py-10 mx-auto bg-pastelPink">
+        <h1>Rick And Morty</h1>
+
+        <div class="flex flex-row items-center w-full justify-evenly">
+            <button class="px-5 py-2 shadow-sm bg-lemonYellow rounded-xl">&lt;&lt;&lt; Prev</button>
+            <button class="px-5 py-2 shadow-sm bg-lemonYellow rounded-xl">&gt;&gt;&gt; Next</button>
+        </div>
+
+    </div>
 
 </body>
 
