--- a/5-BOLUM/SignalR-Client/Index.html
+++ b/5-BOLUM/SignalR-Client/Index.html
@@ -9,23 +9,27 @@
 
 <body>
     <h1>SignalR Client</h1>
+    <input type="text" name="" id="UserInput" placeholder="User">
+    <input type="text" name="" id="Message" placeholder="Message">
+    <button onclick="SendMessage()" type="button">Send</button>
     <div>
         <ul id="message">
 
         </ul>
     </div>
-    <input type="text" name="" id="UserInput" placeholder="User">
-    <input type="text" name="" id="Message" placeholder="Message">
-    <button onclick="SendMessage()" type="button">Send</button>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/microsoft-signalr/8.0.7/signalr.js"
         integrity="sha512-FzakzcmrNSXS5+DuuYSO6+5DcUZ417Na0vH1oAIo49mMBA8rHSgkKSjE2ALFOxdQ/kPqF3HZRzb0HQ+AvwXttg=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script>
+
+
         const connection = new signalR.HubConnectionBuilder()
-            .withUrl("http://localhost:5295/chatHub") // api main adresi/chatHub seklinde yazilmali
+            .withUrl("http://wissenchatapi.runasp.net/chatHub") // api main adresi/chatHub seklinde yazilmali
             .configureLogging(signalR.LogLevel.Information)
             .build();
+
+
 
         async function start() {
             try {
@@ -44,23 +48,36 @@
         // Start the connection.
         start();
 
+
+
         connection.on("ReceiveMessage", (user, message) => {
             const msg = `${user} : ${message}`;
-            const li = document.createElement("li");
-            li.textContent = msg;
-            document.getElementById("message").appendChild(li);
+            if (message === 'clear') {
+                const listItems = document.querySelectorAll('li');
+                listItems.forEach(item => item.remove());
+            } else if (message === 'deeppink') {
+                document.body.style.backgroundColor = 'deeppink';
+            } else if (message === 'white') {
+                document.body.style.backgroundColor = 'white';
+            } else {
+                const li = document.createElement("li");
+                li.textContent = msg;
+                document.getElementById("message").appendChild(li);
+            }
         });
+
+
 
         function SendMessage() {
             const user = document.getElementById("UserInput").value;
             const message = document.getElementById("Message").value;
 
-            const response = fetch("http://localhost:5295/api/Chat/Send", {
+            const response = fetch("http://wissenchatapi.runasp.net/api/Chat/Send", {
                 method: "POST",
                 headers: {
                     'Content-Type': "Application/json"
                 },
-                body: JSON.stringify({ UserName: user, Message: message })
+                body: JSON.stringify({ User: user, Message: message })
             });
             if (!response.ok) {
                 alert = ("Mesaj Gonderilemedi")
